Fix developer card image too small

--- a/public/css/mybuddy.css
+++ b/public/css/mybuddy.css
@@ -221,12 +221,19 @@ main > header {
 .blog_image-wrapper {
     width: 100%;
     overflow: hidden;
+    padding-top: 65%;
+    position: relative;
 }
 
 .blog_image {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .simple-row {
